--- a/src/view/Login/styles.css
+++ b/src/view/Login/styles.css
@@ -39,7 +39,7 @@
 
 .left-box {
   background-color: #414141;
-  width: 400px;
+  width: 424px;
   height: 600px;
 }
 
@@ -52,21 +52,82 @@
   border-radius: 0px 8px 8px 0px;
 }
 
-.right-box h1 {
-  margin: 107px 0px 48px 55px;
+.login-container h1 {
+  margin: 80px 0px 48px 55px;
   font-size: 32px;
+  align-self: flex-start;
 }
 
-.formulario {
+.cadastro-container h1 {
+  margin-left: 10px;
+  font-size: 32px;
+  align-self: flex-start;
+}
+
+.header-cadastro {
   display: flex;
+  flex-direction: row;
+  align-items: center;
+  align-self: flex-start;
+  margin: 55px 0px 48px 55px;
+}
+
+.header-cadastro button {
+  background-color: transparent;
+  border-color: transparent;
+  font-size: 32px;
+  color: #f0f0f5;
+  transition: 0.5s;
+}
+
+.header-cadastro button:hover {
+  color: #EC625F;
+
+}
+
+.cadastro-container {
+  display: flex;
+  height: 100%;
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+}
+
+.login-container {
+  display: none;
+  height: 100%;
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+.formulario {
   flex-direction: column;
   align-items: center;
   justify-content: center;
   height: auto;
 }
 
-.formulario input[name="email"]{
+.formulario input[name="email"],
+.cadastro-container input
+{
   margin-bottom: 16px;
+}
+
+.cadastroBotao {
+  background: transparent;
+  border-color: transparent;
+  color: #f0f0f5;
+  font-size: 14px;
+  margin-top: 20px;
+  padding: 5px;
+  cursor: pointer;
+  width: 100%;
+}
+.cadastroBotao:hover {
+  border-bottom-color: #EC625F;
+  
 }
 
 .entrarBotao {
@@ -108,11 +169,11 @@
   padding-left: 8px;
 }
 
-.formulario .input-container {
+.input-container {
   position: relative;
 }
 
-.formulario div .labelInput {
+div .labelInput {
   position: absolute;
   top: 20px;
   left: 20px;
@@ -121,8 +182,8 @@
   pointer-events: none;
 }
 
-.formulario input:focus ~ .labelInput,
-.formulario input:valid ~ .labelInput {
+input:focus ~ .labelInput,
+input:valid ~ .labelInput {
   top: 5px;
   left: 20px;
   font-size: 12px;
@@ -131,7 +192,7 @@
 
 }
 
-.formulario input {
+input {
   transition: .2s;
 
 }
